# Notepad

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  run.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: Cargo.toml  lib.rs
tests/src/: lib.rs
