[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.4.0"
program = { path = "../program" }
solana-program = "=1.18.7"
solana-rpc-client = "1.18.7"
solana-sdk = "1.18.7"
