[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.4.0"
bs58 = "0.5.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
solana-program = "=1.18.7"
thiserror = "1.0.58"

[lib]
crate-type = ["cdylib", "lib"]

